--- a/templates/ADMIN/admin view criminals.html
+++ b/templates/ADMIN/admin view criminals.html
@@ -7,8 +7,10 @@
 {% extends 'ADMIN/Admin_index.html' %}
 {% block body %}
 <body>
-<div align="center"><div>
-    <h1 style="font-weight: bold; background: linear-gradient(to right, #ffb859, #ff1c26); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">CRIMINAL LIST</h1>
+<div align="center">
+    <div>
+        <h1 style="font-weight: bold; background: linear-gradient(to right, #252525, #252525); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: 0px 0px 0px #000, 0px 0px 0px #252525, 0px 0px 0px #000, 0px 0px 0px #252525;">CRIMINALS LIST</h1>
+    </div>
 </div><br>
 <form id="form1" name="form1" method="post" action="/myapp/view_criminals_post/">
     <table class="pull-left">
