--- a/templates/POLICE/Police_index.html
+++ b/templates/POLICE/Police_index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>SN College  | Home</title>
+    <title> AI-CCTV | POLICE</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/static/Home/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/Home/assets/images/logotrans.png" type="image/x-icon">
 
     <!-- Font awesome -->
     <link href="/static/Home/assets/css/font-awesome.css" rel="stylesheet">
@@ -58,9 +58,8 @@
                     <i class="fa fa-envelope"></i>
                     <span>info@sncollege.in</span>
                   </div>
-                  <div class="mu-top-phone"> Welcome Admin
-                    <i class="fa fa-phone"></i>
-                    <span>0483 – 2977142</span>
+                  <div class="mu-top-phone"> Welcome Police Management
+                    <i class="fa-regular fa-building-shield"></i>
                   </div>
                 </div>
               </div>
@@ -70,7 +69,6 @@
                     <ul class="mu-top-social-nav">
                       <li><a href="#"><span class="fa fa-facebook"></span></a></li>
                       <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                      <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                       <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
                       <li><a href="#"><span class="fa fa-youtube"></span></a></li>
                     </ul>
@@ -98,7 +96,7 @@
           </button>
           <!-- LOGO -->              
           <!-- TEXT BASED LOGO -->
-          <a class="navbar-brand" href="/myapp/policehome/"><i class="fa fa-camera"></i><span>AICCTV </span></a>
+          <a class="navbar-brand" href="/myapp/homepage/"><i><img src="/static/Home/assets/images/logotrans.png" width="50" height="50"/></i><span> AICCTV </span></a>
           <!-- IMG BASED LOGO  -->
           <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="logo"></a> -->
         </div>
@@ -110,11 +108,6 @@
               <ul class="dropdown-menu" role="menu">
 {#                <li><a href="/myapp/add_police/#mu-features">Add Station</a></li>#}
                 <li><a href="/myapp/police_view_profile/#mu-features">View</a></li>
-{#                   <li><a href="/collegeapp/add_course/#mu-features">Add Course</a></li>#}
-{#                <li><a href="/collegeapp/view_course/#mu-features">View Course</a></li>#}
-{##}
-{#                     <li><a href="/collegeapp/add_course_Fee/#mu-features">Add Course Fee</a></li>#}
-{#                <li><a href="/collegeapp/view_course_fee/#mu-features">View Course Fee</a></li>#}
 
               </ul>
             </li>
@@ -132,14 +125,8 @@
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">User<span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
-{#                <li><a href="/collegeapp/add_staff/#mu-features">Add Staff</a></li>#}
-{#                <li><a href="/collegeapp/view_staff/#mu-features">All Staffs</a></li>#}
+
                 <li><a href="/myapp/police_view_registered_users/#mu-features">View User</a></li>
-{#                <li><a href="/collegeapp/view_temporary_staff/#mu-features">View Temporary Staffs</a></li>#}
-{#                <li><a href="/collegeapp/view_office_staff/#mu-features">View Office Staffs</a></li>#}
-{##}
-{#                <li><a href="/collegeapp/add_HOD/#mu-features">Hod Allocation</a></li>#}
-{#                <li><a href="/collegeapp/view_HOD/#mu-features">View Hod</a></li>#}
 
               </ul>
             </li>
@@ -150,10 +137,6 @@
                 <li><a href="/myapp/police_suspicious_activity/#mu-features">View Activity</a></li>
               </ul>
                </li>
-
-
-
-
 
 
 
@@ -171,13 +154,13 @@
 {#                <li><a href="/myapp/complaints/#mu-features">View Complaint</a></li>#}
 
 {#                <li><a href="/myapp/app_reviews/#mu-features">View Review</a></li>#}
-                <li><a href="/myapp/police_change_password/#mu-features">ChangePassword</a></li>
+                <li><a href="/myapp/police_change_password/#mu-features">Change Password</a></li>
 
 
               </ul>
                </li>
               <li><a href="/myapp/logout/#mu-features"><i class="fa fa fa-sign-out"></i></a></li>
-
+          </ul>
         </div><!--/.nav-collapse -->        
       </div>     
     </nav>
@@ -209,10 +192,10 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h4>Welcome To KAHM Unity Women's College </h4>
+        <h2>POLICE MANAGEMENT </h2>
         <span></span>
-        <h2>We Will Help You To Learn</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
+        <h2>We Will Help You To Detect</h2>
+        <p>CCTV cameras have long been used as deterrents for criminal activity or implemented to reduce the fear of crime in both public and private spaces.</p>
 {#        <a href="#" class="mu-read-more-btn">Read More</a>#}
       </div>
     </div>
@@ -225,28 +208,14 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h4>Premiumu Quality Free Template</h4>
+        <h4>POLICE MANAGEMENT</h4>
         <span></span>
-        <h2>Best Education Template Ever</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
-{#        <a href="#" class="mu-read-more-btn">Read More</a>#}
+        <h2>Secure Now</h2>
+        <p>CCTV cameras have long been used as deterrents for criminal activity or implemented to reduce the fear of crime in both public and private spaces.</p>{#        <a href="#" class="mu-read-more-btn">Read More</a>#}
       </div>
     </div>
     <!-- Start single slider item -->
-    <!-- Start single slider item -->
-    <div class="mu-slider-single">
-      <div class="mu-slider-img">
-        <figure>
-          <img src="/static/Home/assets/img/slider/3.jpg" alt="img">
-        </figure>
-      </div>
-      <div class="mu-slider-content">
-        <h4>Exclusivly For Education</h4>
-        <span></span>
-        <h2>Education For Everyone</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
-{#        <a href="#" class="mu-read-more-btn">Read More</a>#}
-      </div>
+    <!-- deleeted a slide from here -->
     </div>
     <!-- Start single slider item -->    
   </section>
@@ -260,22 +229,22 @@
             <!-- Start single service -->
             <div class="mu-service-single">
               <span class="fa fa-book"></span>
-              <h3>Learn Online</h3>
-              <p>Learning online offers flexible education through digital platforms, enabling access to diverse courses and resources from anywhere.</p>
+              <h3>blaa1</h3>
+              <p>bla1 -p</p>
             </div>
             <!-- Start single service -->
             <!-- Start single service -->
             <div class="mu-service-single">
               <span class="fa fa-users"></span>
-              <h3>Expert Teachers</h3>
-              <p>Expert teachers possess profound knowledge, exceptional communication skills, and a passion for guiding and inspiring students.</p>
+              <h3>blaa2</h3>
+              <p>blaa -2</p>
             </div>
             <!-- Start single service -->
             <!-- Start single service -->
             <div class="mu-service-single">
               <span class="fa fa-table"></span>
-              <h3>Best Classrooms</h3>
-              <p>The best classrooms are dynamic spaces that inspire learning, equipped with state-of-the-art technology and ergonomic design.</p>
+              <h3>Blaa3</h3>
+              <p>blaa -3</p>
             </div>
             <!-- Start single service -->
           </div>
@@ -311,8 +280,7 @@
 
 
 
-  <!-- Start footer -->
-  <footer id="mu-footer">
+  <!-- Start footer --><footer id="mu-footer">
     <!-- start footer top -->
     <div class="mu-footer-top">
       <div class="container">
@@ -323,9 +291,6 @@
                 <h4>Information</h4>
                 <ul>
                   <li><a href="#">About Us</a></li>
-                  <li><a href="">Features</a></li>
-                  <li><a href="">Course</a></li>
-                  <li><a href="">Event</a></li>
                   <li><a href="">Sitemap</a></li>
                   <li><a href="">Term Of Use</a></li>
                 </ul>
@@ -333,25 +298,15 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
               <div class="mu-footer-widget">
-                <h4>Student Help</h4>
+                <h4>Support</h4>
                 <ul>
                   <li><a href="">Get Started</a></li>
-                  <li><a href="#">My Questions</a></li>
-                  <li><a href="">Download Files</a></li>
-                  <li><a href="">Latest Course</a></li>
-                  <li><a href="">Academic News</a></li>                  
+                  <li><a href="#">Questions</a></li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
-              <div class="mu-footer-widget">
-                <h4>News letter</h4>
-                <p>Get latest update, news & academic offers</p>
-                <form class="mu-subscribe-form">
-                  <input type="email" placeholder="Type your Email">
-                  <button class="mu-subscribe-btn" type="submit">Subscribe!</button>
-                </form>               
-              </div>
+
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
               <div class="mu-footer-widget">
@@ -361,7 +316,7 @@
                     HJPJ+3Q5, Keezhal Mukku - Mudappilavil Rd, Mudappilavil, Kerala 673104</p>
                   <p>Phone: 0483 – 2977142 (Office)
                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;080789 92816 (Principal) </p>
-                  <p>Website: www.markups.io</p>
+                  <p>Website: www.sncollege.com</p>
                   <p>Email:info@sncollege.in</p>
                 </address>
               </div>
@@ -375,7 +330,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; All Right Reserved. Designed by <a href="http://www.markups.io/" rel="nofollow">MarkUps.io</a></p>
+          <p>&copy; All Right Reserved.</p>
         </div>
       </div>
     </div>
