--- a/templates/POLICE/police suspicious activity.html
+++ b/templates/POLICE/police suspicious activity.html
@@ -21,13 +21,13 @@
 </table>
     <table class="table table-bordered">
   <tr>
-    <td>si no </td>
-    <td>date </td>
-    <td>place</td>
-    <td>time</td>
-    <td>photo</td>
-    <td>criminal info</td>
-    <td>activity</td>
+    <td>Sn No </td>
+    <td>Date </td>
+    <td>Place</td>
+    <td>Time</td>
+    <td>Photo</td>
+    <td>Criminal Info</td>
+    <td>Activity</td>
 {#      <td></td>#}
 {#      <td></td>#}
   </tr>
