--- a/templates/POLICE/police view registered users.html
+++ b/templates/POLICE/police view registered users.html
@@ -21,13 +21,13 @@
 </table>
     <table class="table table-bordered">
   <tr>
-    <td>si no</td>
-    <td> name</td>
-    <td>gender</td>
-    <td>address</td>
-    <td>email</td>
-    <td>phone</td>
-    <td>photo</td>
+    <td>ID</td>
+    <td>Name</td>
+    <td>Gender</td>
+    <td>Address</td>
+    <td>Email</td>
+    <td>Phone</td>
+    <td>Photo</td>
       <td></td>
 
   </tr>
