--- a/templates/ADMIN/admin view registered users.html
+++ b/templates/ADMIN/admin view registered users.html
@@ -7,9 +7,12 @@
 {% extends 'ADMIN/Admin_index.html' %}
 {% block body %}
 <body>
-<div align="center"><div>
-    <h1 style="font-weight: bold; background: linear-gradient(to right, #8d75ff, #4EAEFF); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">REGISTERED USERS</h1>
+<div align="center">
+    <div>
+        <h1 style="font-weight: bold; background: linear-gradient(to right, #252525, #252525); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: 0px 0px 0px #000, 0px 0px 0px #252525, 0px 0px 0px #000, 0px 0px 0px #252525;">REGISTERED USERS</h1>
+    </div>
 </div><br>
+
 <form id="form1" name="form1" method="post" action="/myapp/registered_users_post/"><br><br>
     <table class="pull-left">
   <tr>
