--- a/templates/ADMIN/view_detect_det.html
+++ b/templates/ADMIN/view_detect_det.html
@@ -1,7 +1,9 @@
 {% extends 'ADMIN/Admin_index.html' %}
 {% block body %}
-<div align="center"><div>
-    <h1 style="font-weight: bold; background: linear-gradient(to right, #ff570b, #4EAEFF); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">DETECTED</h1>
+<div align="center">
+    <div>
+        <h1 style="font-weight: bold; background: linear-gradient(to right, #252525, #252525); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: 0px 0px 0px #000, 0px 0px 0px #252525, 0px 0px 0px #000, 0px 0px 0px #252525;">DETECTED</h1>
+    </div>
 </div><br>
 <div class="row">
         <form class="d-flex" role="search" method="post" action="/myapp/search_view_detect_det/#abc">
