--- a/templates/POLICE/police view criminals.html
+++ b/templates/POLICE/police view criminals.html
@@ -11,7 +11,7 @@
     {% csrf_token %}
     <table class="pull-left">
   <tr>
-    <td>name</td>
+    <td>Name :</td>
     <td>
       <input type="text" name="name" id="textfield" class="form-control"/></td>
     <td><input type="submit" name="button" id="button" value="GO" class="btn btn-success" /></td>
@@ -20,11 +20,11 @@
     <table class="table table-bordered">
   <tr></tr>
   <tr>
-    <td>sn no</td>
-    <td>photo1</td>
-    <td>photo2</td>
-    <td>photo3</td>
-    <td>details</td>
+    <td>Sn No</td>
+    <td>Photo 1</td>
+    <td>Photo 2</td>
+    <td>Photo 3</td>
+    <td>Details</td>
     <td>Criminal</td>
       <td></td>
       <td></td>
