--- a/templates/loginindex.html
+++ b/templates/loginindex.html
@@ -6,7 +6,8 @@ Author URL: http://w3layouts.com
 <html lang="zxx">
 
 <head>
-    <title>Theaf Detection</title>
+    <title>AI-CCTV | LOGIN</title>
+    <link rel="shortcut icon" href="/static/Home/assets/images/logotrans.png" type="image/x-icon">
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
