deleted old photos,adde popup box for forget password

--- a/templates/loginindex.html
+++ b/templates/loginindex.html
@@ -7,6 +7,7 @@ Author URL: http://w3layouts.com
 
 <head>
     <title>AI-CCTV | LOGIN</title>
+    <script src="/static/login/popupalert/popup.js"></script>
     <link rel="shortcut icon" href="/static/Home/assets/images/logotrans.png" type="image/x-icon">
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +18,7 @@ Author URL: http://w3layouts.com
     <link rel="stylesheet" href="/static/login/css/style.css" type="text/css" media="all" />
     <!--//Style-CSS -->
     <link rel="stylesheet" href="/static/login/css/font-awesome.min.css" type="text/css" media="all">
+     <link rel="stylesheet" href="/static/login/popupalert/alert.css" type="text/css" media="all">
 
 </head>
 
@@ -43,10 +45,19 @@ Author URL: http://w3layouts.com
                         </div>
                         <div class="form-row bottom">
                             <div class="form-check">
-{#                                <input type="checkbox" id="remenber" name="remenber" value="remenber">#}
-{#                                <label for="remenber"> Remember me?</label>#}
+                               {% if error_message %}
+                                  <p style="color: red;">{{ error_message }}</p>
+                               {% endif %}
+                                <input type="checkbox" id="remenber" name="remenber" value="remenber">
+                                <label for="remenber"> Remember me?</label>
                             </div>
-{#                            <a href="#url" class="forgot">Forgot password?</a>#}
+                        <a href="#" class="forgot" onclick="showMessage()">Forgot password?</a>
+                            <div class="modal" id="customModal"><div class="modal-content">
+                        <span class="close" onclick="closeModal()">&times;</span>
+                      <p>Please contact admin</p>
+                         </div>
+                                    </div>
+                         {# a href="#" class="forgot" onclick="showMessage()">Forgot password?</a> #}  <
                         </div>
                         <button class="btn btn-primary btn-block" type="submit">Log In </button>
                     </form>
