LOGOU MESSAGE ADDED

--- a/templates/ADMIN/Admin_index.html
+++ b/templates/ADMIN/Admin_index.html
@@ -304,7 +304,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; All Right Reserved.</p>
+          <p>&copy; All Right Reserved. AI - CCTV</p>
         </div>
       </div>
     </div>
