--- a/templates/ADMIN/admin complaints.html
+++ b/templates/ADMIN/admin complaints.html
@@ -17,11 +17,11 @@
   <tr>
     <td>From Date</td>
     <td>
-      <input type="date" name="from" id="textfield" /></td>
+      <input type="date" name="from" id="textfield" value="2024-01-01"/></td>
     <td>To date</td>
     <td>
-      <input type="date" name="to" id="textfield2" /></td>
-        <td><input type="submit" name="button" id="button" value="search" class="btn btn-info"/></td>
+      <input type="date" name="to" id="textfield2" value="2024-01-01"/></td>
+        <td><input type="submit" name="button" id="button" value="Search" class="btn btn-info"/></td>
 
   </tr>
 </table>
