--- a/templates/ADMIN/admin view AppReviews.html
+++ b/templates/ADMIN/admin view AppReviews.html
@@ -17,11 +17,11 @@
   <tr>
     <td>From Date</td>
     <td>
-      <input type="date" name="from" id="textfield" class="form-control"/></td>
+      <input type="date" name="from" id="textfield" class="form-control" value="2024-01-01"/></td>
     <td>To date</td>
     <td>
-      <input type="date" name="to" id="textfield2"class="form-control" /></td>
-        <td><input type="submit" name="button" id="button" value="search" class="btn btn-success" /></td>
+      <input type="date" name="to" id="textfield2"class="form-control" value="2024-01-01" /></td>
+        <td><input type="submit" name="button" id="button" value="Search" class="btn btn-success" /></td>
 
   </tr>
 </table>
