--- a/templates/ADMIN/admin view criminals.html
+++ b/templates/ADMIN/admin view criminals.html
@@ -16,13 +16,13 @@
     <table class="pull-left">
   <tr>
       {% csrf_token %}
-    <td>Name</td>
-    <td>
-      <input type="text" name="textfield" id="textfield" class="form-control"/></td>
+    <td style="padding-right: 20px;">Name </td>
+    <td  style="padding-right: 20px;" >
+      <input type="text" name="textfield" id="textfield" class="form-control" requierd/></td>
     <td><input type="submit" name="button" id="button" value="SEARCH" class="btn btn-success"/></td>
   </tr>
-</table>
-    <table class="table table-bordered">
+</table><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <table class="table table-bordered" >
   <tr></tr>
   <tr>
     <td>SN NO</td>
