--- a/templates/ADMIN/admin view police.html
+++ b/templates/ADMIN/admin view police.html
@@ -14,12 +14,12 @@
 </div><br>
     <table class="pull-left">
   <tr>
-    <td>
+    <td style="padding-right: 20px;">
       <input type="text" name="name" id="textfield" class="form-control"/></td>
       <td><input type="submit" value="search" class="btn btn-success"/></td>
       <td></td>
   </tr><br>
-</table>
+</table><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <table class="table table-bordered">
   <tr>
     <td>SI NO</td>
