--- a/templates/POLICE/police suspicious activity.html
+++ b/templates/POLICE/police suspicious activity.html
@@ -18,7 +18,7 @@
       <input type="date" name="to" id="textfield2" class="form-control"/></td>
     <td><input type="submit" name="button" id="button" value="search" class="btn btn-success"/></td>
   </tr>
-</table>
+</table><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <table class="table table-bordered">
   <tr>
     <td>Sn No </td>
