--- a/templates/POLICE/police view criminals.html
+++ b/templates/POLICE/police view criminals.html
@@ -11,21 +11,21 @@
     {% csrf_token %}
     <table class="pull-left">
   <tr>
-    <td>Name :</td>
-    <td>
+    <td style="padding-right: 20px;">Name :</td>
+    <td style="padding-right: 20px;">
       <input type="text" name="name" id="textfield" class="form-control"/></td>
     <td><input type="submit" name="button" id="button" value="GO" class="btn btn-success" /></td>
   </tr>
-</table>
+</table>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <table class="table table-bordered">
   <tr></tr>
   <tr>
-    <td>Sn No</td>
-    <td>Photo 1</td>
-    <td>Photo 2</td>
-    <td>Photo 3</td>
-    <td>Details</td>
-    <td>Criminal</td>
+    <td>SN NO</td>
+    <td>PHOTO-1</td>
+    <td>PHOTO-2</td>
+    <td>PHOTO-3</td>
+    <td>DETAILS</td>
+    <td>CRIMINALS</td>
       <td></td>
       <td></td>
   </tr>
