--- a/templates/ADMIN/Admin_index.html
+++ b/templates/ADMIN/Admin_index.html
@@ -131,6 +131,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Suspicious Activity<span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
 {#                <li><a href="/collegeapp/add_student/#mu-features">Add</a></li>#}
+                  <li><a href="/myapp/view_detected_unknown/#mu-features">View Unknown Detected</a></li>
                 <li><a href="/myapp/suspicious_activity/#mu-features">View Activity</a></li>
               </ul>
                </li>
