--- a/templates/ADMIN/admin view registered users.html
+++ b/templates/ADMIN/admin view registered users.html
@@ -17,11 +17,11 @@
     <table class="pull-left">
   <tr>
       {% csrf_token %}
-    <td>
+    <td style="padding-right: 20px;">
       <input type="text" name="name" id="textfield" class="form-control" /></td>
     <td><input type="submit" value="Search" class="btn btn-success"/></td>
   </tr>
-</table>
+</table><br><br>
     <table class="table table-bordered">
   <tr>
     <td>ID</td>
