--- a/templates/POLICE/Police_index.html
+++ b/templates/POLICE/Police_index.html
@@ -117,9 +117,9 @@
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Criminal<span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="/myapp/police_add_criminals/#mu-features">Add</a></li>
+                <li><a href="/myapp/police_add_criminals/#mu-features">Add Criminal</a></li>
                 <li><a href="/myapp/police_view_criminals/#mu-features">View Criminal</a></li>
-                <li><a href="/myapp/p_view_detect_det/#mu-features">View Detected criminal</a></li>
+                <li><a href="/myapp/p_view_detect_det/#mu-features">View Detected criminals</a></li>
               </ul>
             </li>
               <li class="dropdown">
@@ -133,8 +133,8 @@
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Suspicious Activity<span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
-{#                <li><a href="/collegeapp/add_student/#mu-features">Add</a></li>#}
-                <li><a href="/myapp/police_suspicious_activity/#mu-features">View Activity</a></li>
+                  <li><a href="/myapp/p_view_detected_unknown/#mu-features">View Unknown Detected</a></li>
+                 <li><a href="/myapp/police_suspicious_activity/#mu-features">View Suspicious Activity</a></li>
               </ul>
                </li>
 
