--- a/templates/ADMIN/Admin_index.html
+++ b/templates/ADMIN/Admin_index.html
@@ -67,9 +67,10 @@
                 <div class="mu-header-top-right">
                   <nav>
                     <ul class="mu-top-social-nav">
-                      <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                      <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                      <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                      <li><a href="https://www.facebook.com/sncollegevatakara/"><span class="fa fa-facebook"></span></a></li>
+                      <li><a href="https://x.com/snc_vatakara?s=20"><span class="fa fa-twitter"></span></a></li>
+                         <!--  twitter to x fa-solid fa-x />  -->
+                      <li><a href="https://in.linkedin.com/school/sn-college-vatakara/"><span class="fa fa-linkedin"></span></a></li>
                       <li><a href="#"><span class="fa fa-youtube"></span></a></li>
                     </ul>
                   </nav>
@@ -202,7 +203,7 @@
     <div class="mu-slider-single">
       <div class="mu-slider-img">
         <figure>
-          <img src="/static/Home/assets/img/slider/cam4.jpg" alt="img">
+          <img src="/static/Home/assets/img/slider/campic.jpg" alt="img">
         </figure>
       </div>
       <div class="mu-slider-content">
