--- a/templates/POLICE/police change password.html
+++ b/templates/POLICE/police change password.html
@@ -15,7 +15,7 @@
     </head>
 <div class="container">
 <form method="post" action="/myapp/police_change_password_post/">
-    {% csrf_token %}
+        {% csrf_token %}
     <div class="row">
         <div class="col-lg-6 m-auto">
             <label for="inputPassword5" class="form-label">Current Password</label>
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-6 m-auto">
+        <div class="col-lg-6 m-auto"><br>
             <label for="inputPassword5" class="form-label">New Password</label>
             <span class="password-toggle" onclick="togglePasswordVisibility2()">
               <i class="fas fa-eye-slash" id="toggleIcon2" aria-hidden="true"></i>
@@ -35,14 +35,18 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-6 m-auto">
+        <div class="col-lg-6 m-auto"><br>
             <label for="inputPassword5" class="form-label">Confirm Password</label>
             <span class="password-toggle" onclick="togglePasswordVisibility3()">
                 <i class="fas fa-eye-slash" id="toggleIcon3" aria-hidden="true"></i>
             </span>
+
             <input type="password" id="passwordInput2" name="confirmpassword" required class="form-control" aria-labelledby="passwordHelpBlock">
+        <span>{% if pass_message %}
+       <p style="color: orangered;">{{ pass_message }}</p>
+                               {% endif %}</span>
         </div>
-    </div>
+    </div><br><br>
     <div class="row mt-4">
         <div class="col-lg-6 m-auto">
                 <input type="submit" class="btn btn-success" value="Change">
